Remove the gitignore files
